--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.16",
     "clsx": "^1.2.1",
+    "postcss": "^8.4.32",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-globe": "^5.0.2"
+    "react-ga4": "^2.1.0",
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1"
